# opensearch_compare_arc_plain

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pr_agent.yml
config/: settings.py
opensearch/: Dockerfile
web/: Dockerfile  pyproject.toml
web/config/: settings.py  urls.py
web/geodistance/: apps.py  forms.py  services.py  test_geodistance.py  urls.py  views.py
web/geodistance/templates/geodistance/: form.html  result.html
