[project]
name = "django-in-production-07"
version = "0.1.0"
description = "django-in-production 7章"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django==5.1.4",
    "psycopg2-binary==2.9.10",
    "django-environ==0.12.0",
    "opensearch-py==2.8.0",
]

[tool.uv]
link-mode = "copy"
dev-dependencies = [
    "ruff==0.12.1",
    "pytest==8.4.1",
    "Faker==33.3.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
